# Intelligent-Pipe-Inspection-Robot-Controller

./: LICENSE  README.md  install_dependancies_pipe_inspect_robot_controller.sh
pipe_inspect_robot_control/: CMakeLists.txt  package.xml
pipe_inspect_robot_control/config/: pipe_inspect_robot_control.yaml  pipe_inspect_robot_joint_names.yaml  pipe_inspect_robot_joystick_parameters.yaml  robot_control_display.rviz
pipe_inspect_robot_control/src/: create_gui_camera_overlay.py  joystick_class.py  joystick_teleop.py  main_robot_controller.py  manual_pipe_structure_identifier.py  robot_movements.py
pipe_inspect_robot_description/: CMakeLists.txt  package.xml
pipe_inspect_robot_description/config/: rviz_display.rviz
pipe_inspect_robot_description/launch/: display.launch
pipe_inspect_robot_description/meshes/: EW1.STL  EW2.STL  EWH1.STL  EWH2.STL  MP1.STL  MP3.STL  MP4.STL  SL_sensor.STL  W1.STL  W2.STL  W3.STL  W4.STL  W5.STL  W6.STL  base_link.STL
pipe_inspect_robot_description/urdf/: pipe_inspect_robot.xacro
pipe_inspect_robot_gazebo/: CMakeLists.txt  package.xml
pipe_inspect_robot_gazebo/include/pipe_inspect_robot_gazebo/: sensor_data_structure.h
pipe_inspect_robot_gazebo/launch/: pipe_inspect_robot_control_demo_world.launch
pipe_inspect_robot_gazebo/launch/world_launch/: control_demo_world.launch  pipe_structure_demo_world.launch
pipe_inspect_robot_gazebo/models/: control_demo.dae
pipe_inspect_robot_gazebo/msg/: pipe_direction_options.msg
pipe_inspect_robot_gazebo/src/: sensor_data_structure.cpp  simulated_sl_sensor.cpp  spring_joint_force_publisher.py
pipe_inspect_robot_gazebo/worlds/: control_demo.world  pipe_structure_demo.world
