<?xml version="1.0"?>
<package format="2">
  <name>pipe_inspect_robot_control</name>
  <version>1.0.0</version>
  <description>The pipe_inspect_robot_control package contains a set of python files allowing for the control of pipe inspection robots, mainly the robot platform designed for the CAAP project from 2022 - 2023</description>

  <maintainer email="ahinds@mines.edu">Alex Hinds</maintainer>
  <license>BSD</license>

  <build_depend>message_generation</build_depend> 
  <exec_depend>message_runtime</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>ros-noetic-velocity-controllers</depend>

</package>
